2013-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/trace.el (trace--read-args): Use a closure and an honest
	call to `eval' rather than a backquoted lambda.

2013-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/nadvice.el (advice--tweak): Make it possible for `tweak'
	to return an explicit nil.
	(advice--remove-function): Change accordingly.

	* emacs-lisp/advice.el (ad-preactivate-advice): Adjust the cleanup to
	the use of nadvice.el.

	* progmodes/which-func.el (which-function): Silence imenu errors
	(bug#13433).

2013-01-15  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: (sql-imenu-generic-expression):
	(sql-mode-font-lock-object-name): Match schema qualified names.
	(sql-connect): Use string keys.
	(sql-product-interactive): Wait for interpreter prompt.
	(sql-comint-oracle): Set process coding based on NLS_LANG.

2013-01-15  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el (sql-output-to-send): Remove, unused.
	(sql-interactive-remove-continuation-prompt):
	(sql-send-magic-terminator, sql-interactive-mode): Remove references.

2013-01-14  Leo Liu  <sdl.web@gmail.com>

	* calendar/calendar.el (calendar-redraw): Sync window-point and point.
	(Bug#13420)

2013-01-14  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Fix interpretation of gnu line.col1-col2 format.  (Bug#13335)

2013-01-13  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-nav-end-of-statement):
	Fix cornercase when handling multiline strings.

2013-01-13  Richard Stallman  <rms@gnu.org>

	* mail/sendmail.el (mail-position-on-field): Add doc string.

	* mail/rmailmm.el (rmail-insert-mime-forwarded-message):
	Get current message boundaries and pass them to
	message-forward-make-body-mime.  Minor style changes.

2013-01-13  Eli Zaretskii  <eliz@gnu.org>

	* cus-start.el (all): Avoid warnings about
	scroll-bar-adjust-thumb-portion on platforms where it is not defined.
