@@ -1,3 +1,13 @@
+2013-01-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* autorevert.el (auto-revert-use-notify): In the :set function, do
+	not modify `kill-buffer-hook'.
+	(auto-revert-notify-rm-watch): Remove
+	`auto-revert-notify-rm-watch' from `kill-buffer-hook'.
+	(auto-revert-notify-add-watch): Do not call
+	`auto-revert-notify-rm-watch', but add it to a buffer local
+	`kill-buffer-hook'.
+
 2013-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/trace.el (trace--read-args): Use a closure and an honest
